# nog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build_docs.ps1  config.md  config.rhai  create_installer.bat  default_config.rhai  default_config.yaml  make_release.ps1
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: auto_delete.yml  auto_release.yml  build_docs.yml  development_auto_release.yml
assets/: default_config.lua  default_config.nog
book/: book.toml
book/src/: README.md  SUMMARY.md  SUMMARY_TEMPLATE.md  api_toc.md
doc-gen/: .gitignore  Cargo.toml  book.toml
doc-gen/book/: 404.html  print.html  searchindex.js  searchindex.json
doc-gen/nogscript/: main.ns  nog.ns  std.ns
doc-gen/output/: SUMMARY.md
doc-gen/src/: main.rs
docs/: 404.html  README.md  _sidebar.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
docs/_media/: default_config.nog
docs/api/: Array.html  Components.html  Display.html  General.html  Keybindings.html  Plugin.html  Popup.html  Window.html  Workspace.html  atomic.html  nog.html  prelude.html  print.html  range.html  require.html  std.html  typeof.html
docs/book/: 404.html  print.html
docs/configuration/: bar.html  bar.md  basics.md  gap.md  introduction.html  introduction.md  keybindings.html  keybindings.md  modes.html  modes.md  plugins.html  rules.html  rules.md  settings.html  workspaces.html  workspaces.md
docs/example_configurations/: ramirezmike.md  timuntersberger.md
docs/getting-started/: floating_mode.html  fullscreen_mode.html  installation.html  pinning_mode.html  quick_start.html  work_mode.html
docs/nogscript/: classes.html  (+5 more)
example/: config.nog  config.ns  config.rhai  keybindings.nog  keybindings.ns  keybindings.rhai  plugins.ns  rules.nog  rules.ns  rules.rhai  workspace.ns
interpreter/: Cargo.toml
interpreter/nog/: lib.nog  lib.ns  main.nog  main.ns
interpreter/nog/lib/: mod.nog
interpreter/src/: ast.rs  class.rs  dynamic.rs  expr_parser.rs  expression.rs  formatter.rs  function.rs  interpreter.rs  lexer.rs  lib.rs  macros.rs  main.rs  method.rs  module.rs  operator.rs  parser.rs  runtime_error.rs  scope.rs  token.rs
interpreter/src/dynamic/: object_builder.rs
nog/: main.nog
ns-cli/: Cargo.toml
old_docs/: _sidebar.md
src/: app_bar.rs  bar.rs  config.rs  direction.rs  display.rs  event.rs  event_handler.rs  hot_key_manager.rs  hot_reload.rs  keybindings.rs  logging.rs  main.rs  message_loop.rs  monitor.rs  plugin_manager.rs  popup.rs  split_direction.rs  startup.rs  task_bar.rs  tile.rs  tile_grid.rs  tray.rs  update.rs  util.rs  uuid.rs  win_event_handler.rs  window.rs  workspace.rs
twm/: Cargo.toml  init.lua
twm/lua/: runtime.lua
twm/runtime/lua/: inspect.lua  runtime.lua  window.lua  workspace.lua
twm/src/: bar.rs  config.rs  display.rs  event.rs  event_handler.rs  hot_reload.rs  keybindings.rs  keyboardhook.rs  logging.rs  main.rs  message_loop.rs  pinned.rs  popup.rs  split_direction.rs  startup.rs  task_bar.rs  tile.rs  tile_grid.rs  tray.rs  update.rs  util.rs  win_event_handler.rs  window.rs
twm/src/bar/: component.rs  create.rs  item.rs
twm/src/bar/component/: active_mode.rs  current_window.rs  date.rs  fullscreen_indicator.rs  padding.rs  split_direction.rs  time.rs  workspaces.rs
twm/src/config/: bar_config.rs  hot_reloading.rs  rule.rs
twm/src/config/rhai/: engine.rs  functions.rs  mod.rs  syntax.rs
twm/src/config/rhai/modules/: components.rs  http.rs
twm/src/config/rhai/types/: mod.rs
twm/src/config/update_channel/: repository.rs  semantic_version.rs
twm/src/event_handler/: keybinding.rs  winevent.rs
twm/src/event_handler/keybinding/: swap_columns_rows.rs
twm/src/event_handler/winevent/: destroy.rs  focus_change.rs  show.rs
twm/src/keybindings/: key.rs  keybinding.rs  modifier.rs
twm/src/lua/: conversions.rs  mod.rs  runtime.lua  runtime.rs
twm/src/nogscript/: mod.rs
twm/src/nogscript/lib/: mod.rs
twm/src/renderer/: mod.rs  win.rs
twm/src/system/: mod.rs  win.rs
twm/src/system/win/: api.rs  menu.rs
twm/src/tile_grid/: graph_wrapper.rs  node.rs  store.rs  tests.rs  text_renderer.rs  tile_render_info.rs
twm/src/win_event_handler/: win_event.rs  win_event_code.rs  win_event_type.rs
twm/src/window/: gwl_ex_style.rs  gwl_style.rs
wix/: License.rtf  main.wxs
(+337 files in other folders)
