[package]
name = "wwm"
version = "0.1.1"
log = "debug"
description = "A tiling window manager for Windows 10"
license = "MIT"
homepage = "http://www.github.com/TimUntersberger/wwm"
authors = ["timun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.7.1"
winapi = { version = "0.3", features = ["winuser", "errhandlingapi", "impl-default", "shellapi"] }
chrono = "0.4"
lazy_static = "1.4.0"
num-traits = "0.2"
num-derive = "0.3"
strum = "0.18.0"
strum_macros = "0.18.0"
dirs = "2.0"
yaml-rust = "0.4.4"
thiserror = "1.0"
ctrlc = { version = "3.0", features = ["termination"] }