[package]
name = "interpreter"
version = "0.1.0"
authors = ["TimUntersberger <timuntersberger2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.11.4"
pratt = { "git" = "https://github.com/TimUntersberger/pratt" }
itertools = "0.9.0"
